# blind-aria-react

./: .gitignore  package-lock.json  package.json
backend/: main.py  pyproject.toml
backend/app/models/: search_plan.py
backend/app/routes/: agent.py
backend/app/services/: agent_service.py  recording_metadata.py  session_service.py  youtube_service.py
backend/app/services/planners/: __init__.py  base.py  factory.py  llm_search_planner.py  rule_based_planner.py
backend/tests/: conftest.py  test_agent_api.py  test_agent_service.py  test_recording_metadata.py  test_search_planners.py
src/: App.css  App.tsx
src/agents/searchAgent/: SearchAgentPanel.tsx  SearchPlanPanel.tsx  searchAgentApi.ts
src/api/: searchApi.ts
src/components/: BlindRecordingCard.tsx  BlindYouTubePlayer.tsx  SessionPresence.tsx
src/data/: mockRecordings.ts
src/pages/: SearchPage.tsx  SessionPage.tsx
src/services/: searchService.ts  sessionService.ts
src/types/: Recording.ts
